--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -5,31 +5,44 @@
 }
 
 /*-----Header-----*/
-header{
-    background-color: rgba(240, 240, 240, 0.1);
-    padding: 20px 0px;
-    position: absolute;
-    z-index: 3000000;
-    width: 100%;
-    top: 0;
-    left: 0;
+header {
+  background-color: rgba(240, 240, 240, 0.1);
+  padding: 20px 0px;
+  position: absolute;
+  z-index: 3000000;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
-header ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
+
+/* Estilos del menú de navegación */
+header ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
 }
-header .menu-item a{
-    color: rgb(65, 164, 235);
-    font-size: 20px;
-    padding: 0px 18px;
-    text-decoration: none;
+
+/* Estilos del logotipo */
+header .logo {
+  /* Agrega margen derecho para separar el logotipo del menú */
+  margin-right: 20px;
 }
-header .logo a{
-    font-family: "Pixelify+Sans", 'Poppins';
-    font-size: 36px;
-    padding: 0px 16;
+
+header .logo a {
+  font-family: "Pixelify+Sans", 'Poppins';
+  font-size: 36px;
+  padding: 0px 16px;
+  letter-spacing: 0; /* Reajusta el espaciado de letras a 0 */
+  text-decoration: none;
+}
+
+/* Estilos de los elementos del menú */
+header .menu-item a {
+  color: rgb(65, 164, 235);
+  font-size: 20px;
+  padding: 0px 18px;
+  text-decoration: none;
 }
 /*----Inicio----*/
 .parallax-home {
@@ -164,7 +177,7 @@ p {
 .targeta-home {
   width: 200px;
   padding: 20px;
-  background-color: #e99de430;
+  background-color: #e99de4;
   border-radius: 10px;
   text-align: center;
 }
@@ -441,10 +454,6 @@ button:hover {
     width: 48%; /* Ajusta el ancho de cada video según tu preferencia */
     margin: 1%;
   }
-  .video {
-    width: 45%; /* Reducido el ancho para que se vean más pequeños */
-    margin: 2.5%;
-  }
   
   .video iframe {
     width: 100%;
@@ -574,3 +583,32 @@ button:hover {
   .cta-button:hover {
     background-color: #2980b9;
   }
+
+  /* Responsive */
+  @media (max-width: 375px) {
+    header ul {
+        flex-direction: column; 
+        align-items: center;
+    }
+
+    /* Mueve el logotipo al principio en la versión móvil */
+    header .logo {
+        margin-right: 0; 
+        margin-bottom: 10px; 
+    }
+}
+
+@media (min-width: 376px) and (max-width: 992px) {
+  header ul {
+    flex-direction: column; 
+    align-items: center;
+}
+
+/* Mueve el logotipo al principio en la versión móvil */
+header .logo {
+    margin-right: 0; 
+    margin-bottom: 10px; 
+}
+}
+
+
